; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_cpu-ia64-opc.c_ins_immsu4.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_cpu-ia64-opc.c_ins_immsu4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ia64_operand = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.ia64_operand*, i32, i32*)* @ins_immsu4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ins_immsu4(%struct.ia64_operand* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.ia64_operand*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store %struct.ia64_operand* %0, %struct.ia64_operand** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = xor i32 %7, -2147483648
  %9 = sub i32 %8, -2147483648
  store i32 %9, i32* %5, align 4
  %10 = load %struct.ia64_operand*, %struct.ia64_operand** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = call i8* @ins_imms_scaled(%struct.ia64_operand* %10, i32 %11, i32* %12, i32 0)
  ret i8* %13
}

declare dso_local i8* @ins_imms_scaled(%struct.ia64_operand*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
